--- a/style.css
+++ b/style.css
@@ -142,3 +142,11 @@ h1 {
   margin-top: 10px;
   margin-bottom: 5px;
 }
+
+#image {
+  grid-column: 2 / 3;
+  grid-row: 4 / 8;
+  width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
